alteração de nome de classe css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <div class="content">
-    <div class="left-content">
+    <div class="left-virtual-content">
       <div class="virtual-store">
         <p>LOJA VIRTUAL</p>
         <hr>
